syntax = "proto3";
package hyperlane.warp.v1;

option go_package = "github.com/KYVENetwork/hyperlane-cosmos/x/warp/types";

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "amino/amino.proto";
import "google/protobuf/any.proto";


// Params defines the parameters of the module.
message Params { option (amino.name) = "hyperlane/warp/Params"; }

// GenesisState is the state that must be provided at genesis.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  repeated HypToken tokens = 2
  [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  int64 token_count = 3;
}

message HypToken {
  bytes id = 1;
  string creator = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  HypTokenType token_type = 3;

  bytes origin_mailbox = 4;
  string origin_denom = 5;

  uint32 receiver_domain = 6;
  bytes receiver_contract = 7;
}

enum HypTokenType {
  option (gogoproto.goproto_enum_prefix) = false;

  // HYP_TOKEN_COLLATERAL ...
  HYP_TOKEN_COLLATERAL = 0;

  // HYP_TOKEN ...
  HYP_TOKEN_SYNTHETIC = 1;
}